--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,35 @@
+<h2><u>Projects:</u></h2> 
+
+<p>
+<h3><u>Current:</u></h3>
+<pre>
+<ul class="fa-ul">
+<i class="fa fa-refresh fa-spin fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/~agents/?l=Research:Projects:productive_empathy:index#pagetop'>(Details)</a></li>
+
+<i class="fa fa-refresh fa-spin fa-lg"></i> Personal recommendations for food based on geolocation.</li>
 
 
-<h3>Here are some of my projects:</h3> 
- 
+</ul>
+</pre>
+</p>
 
+
+<p>
+<h3><u>Past:</u></h3>
+<pre>
+<ul class="fa-ul">
+
+<li><i class="fa fa-check-square-o fa-lg"></i> Multi Robot Path Planning - A Quadcopter Implementation. <a href='assets/pic.jpg'>(Details)</a></li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> USC Aero Design Team AIAA DBF 2013-14. <a href='http://www.aiaadbf.org/2014_files/aiaadbf.htm'>(Details)</a></li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> A neural network approach for complex cognition and planning in adversarial environments. <a href='/assets/Hariharan,Abishek-Project3.pdf'>(Details)</a></li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> System Model for Target Localization using a Heterogenous Symbiotic Swarm.</li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> Graph Based Planning for Checkers.<a href='/assets/checkers.png'>(Details)</a></li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> ...</li>
+</ul>
+</pre>
+</p>
