--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <a href='#about'>About</a>
         <a href='#projects'>Projects</a>
 	<a href='#publications'>Publications</a>
+<a href='/assets/Abishek_Hariharan_Resume_US_February2015.pdf'><i class="fa fa-file-text-o"></i></a>
       
      
       </nav>
