--- a/videos.html
+++ b/videos.html
@@ -1,11 +1,11 @@
 <h2>Videos:</h2>
 <br>
-<iframe src="//player.vimeo.com/video/98881892?color=ffffff&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/98881892">Single Agent Topology for Target Tracking</a>
+<iframe src="//player.vimeo.com/video/98881892?byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/98881892">Single Agent Topology for Target Tracking</a>
 
 <br>
 <br>
 
-<iframe src="//player.vimeo.com/video/98881891?color=ffffff&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/98881891">Lateral Agent Topology for Target Tracking</a>
+<iframe src="//player.vimeo.com/video/98881891?byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/98881891">Lateral Agent Topology for Target Tracking</a> 
 
 <br>
 <br>
