--- a/videos.html
+++ b/videos.html
@@ -10,4 +10,4 @@
 <br>
 <br>
 
-<iframe src="//player.vimeo.com/video/98881893?color=ffffff&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/98881893">Stacked Topology for Target Tracking</a>
+<iframe src="//player.vimeo.com/video/98881893?byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/98881893">Stacked Topology for Target Tracking</a>
