Addded Instagram photos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type='text/javascript'>
       $(document).ready(function() {
         $('#page_holder').pagify({
-          pages: ['about', 'projects', 'publications','videos'],
+          pages: ['about', 'projects', 'publications','videos','photos'],
           animation: 'fadeIn',
           'default': 'about',
           cache: true
@@ -31,6 +31,7 @@
         <a href='#projects'>Projects</a>
 	<a href='#publications'>Publications</a>
 	<a href='#videos'>Videos</a>
+	<a href='#photos'>Photos</a>
         <a href='/assets/Abishek_Hariharan_Resume_US_February2015.pdf'><i class="fa fa-file-text-o"></i></a>
       
      
