Added Tools Section

--- a/about.html
+++ b/about.html
@@ -3,8 +3,7 @@
 
 <p align="justify"> I'm a roboticist with a Bachelors degress in engineering from BIT, Mesra (2011) and an M.S. degree in computer science from the University of Southern California, Los Angeles (2014).</p>
 
-<p align="justify">I specialize in robotics and multi agent systems. My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization.</p>
-
+<p align="justify">I specialize in robotics and multi agent systems. My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization.
 
 <h3><u>Stuff I read:</u><h3>
 <ul compact="true">
