Added News Section

--- a/projects.html
+++ b/projects.html
@@ -33,3 +33,20 @@
 </ul>
 </pre>
 </p>
+
+
+<p>
+<h3><u>In the News:</u></h3>
+<pre>
+<ul class="fa-ul">
+
+<li><i class="fa fa-newspaper-o fa-lg"></i> LA Times August 2nd, 2015 <a href='assets/LAtimes.png'>(Details)</a></li>
+
+<li><i class="fa fa-newspaper-o fa-lg"></i> Student engineers shoot to No. 1 in airplane design-and-fly contest <a href='http://news.usc.edu/62584/student-engineers-shoot-to-no-1-in-airplane-design-and-fly-contest/'>(Details)</a></li>
+
+<li><i class="fa fa-newspaper-o fa-lg"></i> University of Southern California Wins 18th Annual Student Design/Build/Fly Competition <a href='http://www.aiaa.org/SecondaryTwoColumn.aspx?id=23020'>(Details)</a></li>
+
+
+</ul>
+</pre>
+</p>
