--- a/tools.html
+++ b/tools.html
@@ -1,3 +1,7 @@
 <h2>Tools:</h2>
 
-Coming soon.. :)
+<ul id='options'>
+<li>
+<b><a href='https://github.com/abishekh/CPP-Repo/tree/master/Skycatch/PIDControl'>PID Control Library</a></b> A PID Control Library written in C++
+</li>
+</ul>
