--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,8 @@
 <h3><u>Current:</u></h3>
 <pre>
 <ul class="fa-ul">
-<i class="fa fa-refresh fa-spin fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/~agents/?l=Research:Projects:productive_empathy:index#pagetop'>(Details)</a></li>
 
-<i class="fa fa-refresh fa-spin fa-lg"></i> Personal recommendations for food based on geolocation.</li>
+<i class="fa fa-refresh fa-spin fa-lg"></i> Currently on break.</li>
 
 
 </ul>
@@ -18,6 +17,7 @@
 <h3><u>Past:</u></h3>
 <pre>
 <ul class="fa-ul">
+<li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/~agents/?l=Research:Projects:productive_empathy:index#pagetop'>(Details)</a></li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> Multi Robot Path Planning - A Quadcopter Implementation. <a href='assets/pic.jpg'>(Details)</a></li>
 
