--- a/tools.html
+++ b/tools.html
@@ -4,4 +4,9 @@
 <li>
 <b><a href='https://github.com/abishekh/CPP-Repo/tree/master/Skycatch/PIDControl'>PID Control Library</a></b> A PID Control Library written in C++
 </li>
+
+<li>
+<b><a href='https://github.com/apenwarr/sshuttle'>sshuttle</a></b> A handy proxy/VPN/access to geo-fenced data tool. Especially useful when you aren't onsite but need access to resources that are local only. ;)
+</li>
+
 </ul>
