--- a/tools.html
+++ b/tools.html
@@ -6,7 +6,7 @@
 </li>
 
 <li>
-<b><a href='https://github.com/apenwarr/sshuttle'>sshuttle</a></b> A handy proxy/VPN/access to geo-fenced data tool. Especially useful when you aren't onsite but need access to resources that are local only. ;)
+<b><a href='https://github.com/apenwarr/sshuttle'>sshuttle</a></b> A handy proxy/VPN/access to geo-fenced data tool. Especially useful when you need access to resources that are local only. ;)
 </li>
 
 </ul>
