Added Ahardware section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ woopra.track();
     <script type='text/javascript'>
       $(document).ready(function() {
         $('#page_holder').pagify({
-          pages: ['about', 'projects', 'publications','videos','photos','tools'],
+          pages: ['about','hwexp', 'projects', 'publications','videos','photos','tools'],
           animation: 'fadeIn',
           'default': 'about',
           cache: true
@@ -42,14 +42,16 @@ woopra.track();
     <div id='container'>
     <header>
       <h1>Abishek Hariharan</h1>
+    
       <nav>
         <a href='#about'>About</a>
+        <a href='#hwexp'>Hardware</a>
         <a href='#projects'>Projects</a>
-	<a href='#publications'>Publications</a>
-	<a href='#videos'>Videos</a>
-	<a href='#photos'>Photos</a>
-	<a href='#tools'>Tools</a>
-	<a href='/assets/Abishek_Hariharan_Resume_US_April2015N.pdf'><i class="fa fa-file-text-o"></i></a>
+	      <a href='#publications'>Publications</a>
+	      <a href='#videos'>Videos</a>
+	      <a href='#photos'>Photos</a>
+	      <a href='#tools'>Tools</a>
+	      <a href='/assets/Abishek_Hariharan_Resume_US_April2015N.pdf'><i class="fa fa-file-text-o"></i></a>
 	
       </nav>
     </header>
