updated hardware section

--- a/hwexp.html
+++ b/hwexp.html
@@ -39,7 +39,11 @@
 
 <li><i class="fa fa-check-square-o fa-lg"></i> MTK3339 GPS<a href='http://www.adafruit.com/products/746'>(Details)</a></li>
 
+<li><i class="fa fa-check-square-o fa-lg"></i> BSS138 Logic level converter.<a href='https://www.sparkfun.com/products/12009'>(Details)</a></li>
+
 <li><i class="fa fa-check-square-o fa-lg"></i> FSRs - Force sensitive resistors</li>
+
+
 </ul>
 </pre>
 </p>
