updated hardware section

--- a/hwexp.html
+++ b/hwexp.html
@@ -41,7 +41,7 @@
 
 <li><i class="fa fa-check-square-o fa-lg"></i> BSS138 Logic level converter.<a href='https://www.sparkfun.com/products/12009'>(Details)</a></li>
 
-<li><i class="fa fa-check-square-o fa-lg"></i> LT1302 High output current stepup converter.</li><a href='http://www.linear.com/product/LT1302'>(Details)</a></li>
+<li><i class="fa fa-check-square-o fa-lg"></i> LT1302 High output current stepup converter.<a href='http://www.linear.com/product/LT1302'>(Details)</a></li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> FSRs - Force sensitive resistors</li>
 
