updated hardware section

--- a/hwexp.html
+++ b/hwexp.html
@@ -65,7 +65,7 @@
 
 <li><i class="fa fa-check-square-o fa-lg"></i> AscTech Hummingbird <a href='http://www.clearpathrobotics.com/hummingbird-uav/'>(Details)</a></li>
 
-
+<li><i class="fa fa-check-square-o fa-lg"></i> Maki <a href='http://www.hello-robo.com/#!maki/c1l0g'>(Details)</a></li>
 </ul>
 </pre>
 </p>
