updated hardware - pulse sensor

--- a/hwexp.html
+++ b/hwexp.html
@@ -43,6 +43,8 @@
 
 <li><i class="fa fa-check-square-o fa-lg"></i> LT1302 High output current stepup converter.<a href='http://www.linear.com/product/LT1302'>(Details)</a></li>
 
+<li><i class="fa fa-check-square-o fa-lg"></i> Pulse Sensor.<a href='http://pulsesensor.com/'>(Details)</a></li>
+
 <li><i class="fa fa-check-square-o fa-lg"></i> FSRs - Force sensitive resistors</li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> EL wire and power inverter.</li>
