--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@
 <pre>
  Karol Hausman, Joerg Mueller, Abishek Hariharan, Nora Ayanian and Gaurav S. Sukhatme.
 "Cooperative Multi-Robot Control for Target Tracking with Onboard Sensing".
- Submitted to International Journal of Robotics Research, 2015.<a href='http://robotics.usc.edu/publications/873/'>(Details)</a> </pre>
+ International Journal of Robotics Research, Oct. 2015.<a href='http://robotics.usc.edu/publications/873/'>(Details)</a> </pre>
 </li>
 <li><i class="fa-li fa fa-check-square"></i>
 <pre>
