Updated current status in projects

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 <pre>
 <ul class="fa-ul">
 
-<i class="fa fa-refresh fa-spin fa-lg"></i> Currently on break.</li>
+<i class="fa fa-refresh fa-spin fa-lg"></i> Full-time engineer @ Skycatch Inc..</li>
 
 
 </ul>
