--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 <pre>
 <ul class="fa-ul">
 
-<li><i class="fa fa-refresh fa-spin fa-lg"></i> Full-time engineer @ Skycatch Inc.</li>
+<li><i class="fa fa-refresh fa-spin fa-lg"></i> Senior Robotics Engineer @ Soloshot.</li>
 
 
 </ul>
@@ -17,6 +17,8 @@
 <h3><u>Past:</u></h3>
 <pre>
 <ul class="fa-ul">
+<li><i class="fa fa-check-square-o fa-lg"></i> Full-time Engineer at Skycatch Inc. </li>
+
 <li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/~agents/?l=Research:Projects:productive_empathy:index#pagetop'>(Details)</a></li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> Multi Robot Path Planning - A Quadcopter Implementation. <a href='assets/pic.jpg'>(Details)</a></li>
