Fixed Things I read mismatch with <small>

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
 
 <h3><u>Stuff I read:</u><h3>
 <ul compact="true">
-<li><small><a href='http://planning.cs.uiuc.edu/'>Planning Algorithms</a> - <em>Steven M. LaValle</em></small></li>
-<li><small><a href='http://link.springer.com/book/10.1007%2F978-1-84628-642-1'>Robotics <small>Modelling, Planning and Control </small></a><em>- Siciliano, Sciavicco, Villani, Oriolo </em></small></li>
+<li><small><a href='http://planning.cs.uiuc.edu/'>Planning Algorithms</a> - Steven M. LaValle</small></li>
+<li><small><a href='http://link.springer.com/book/10.1007%2F978-1-84628-642-1'>Robotics Modelling, Planning and Control </a>- Siciliano, Sciavicco, Villani, Oriolo </small></li>
 </ul>
 
 <div>
