--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 
-<img align="left" style="margin-right:15px; margin-bottom:100px" src='assets/me.png' />
+<img align="left" style="margin-right:15px; margin-bottom:100px; margin-top:20px;" src='assets/me.png' />
 <h2>Hey there!</h2>
 <p align="justify"> I'm a roboticist with a Bachelors degree in engineering from BIT, Mesra (2011) and an M.S. degree in computer science from the University of Southern California, Los Angeles (2014).</p>
 
