Corrected mismatched sizing due to div

--- a/about.html
+++ b/about.html
@@ -1,9 +1,12 @@
 
+
 <img align="left" style="margin-right:15px; margin-bottom:100px; margin-top:20px;" src='assets/me.png' />
 <h2>Hey there!</h2>
 <p align="justify"> I'm a roboticist with a Bachelors degree in engineering from BIT, Mesra (2011) and an M.S. degree in computer science from the University of Southern California, Los Angeles (2014).</p>
 
-<p align="justify">I specialize in robotics and multi agent systems. My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization.
+<p align="justify">I specialize in robotics, decision making and multi agent systems. I have previously worked on mobile, humanoid and interactive robots. I enjoy solving problems in these spaces and have collaborated with teams of varying sizes and maturities. 
+
+My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization.
 
 <h3><u>Stuff I read:</u><h3>
 <ul compact="true">
@@ -11,7 +14,8 @@
 <li><small><a href='http://link.springer.com/book/10.1007%2F978-1-84628-642-1'>Robotics Modelling, Planning and Control </a>- Siciliano, Sciavicco, Villani, Oriolo </small></li>
 </ul>
 
-<div>
 <h3><u>Find me here:</u></h3>
+<div>
+
 <a href='https://github.com/abishekh'><i class="fa fa-git-square fa-2x"></i></a> <a href='https://www.linkedin.com/in/abishekh'><i class="fa fa-linkedin-square fa-2x"></i></a> <a href='https://twitter.com/_AHariharan'><i class="fa fa-twitter-square fa-2x"></i></a> <a href='http://open.spotify.com/user/abishekh'><i class="fa fa-spotify fa-2x"></i></a> <a href='https://angel.co/abishekh'><i class="fa fa-angellist fa-2x"></i></a> <a href='http://steamcommunity.com/id/serpderp/'><i class="fa fa-steam-square fa-2x"></i></a> 
 </div>
