--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 
 <p align="justify">I specialize in robotics, decision making and multi agent systems. I have previously worked on mobile, humanoid and interactive robots. I enjoy solving problems in these spaces and have collaborated with teams of varying sizes and maturities. My experience includes aspects of product development that range from initial problem decomposition, to architecture selection, feature development and system validation. 
 <br>
+<p align="justify">
 My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization. Keeping in line with these areas I have gathered experience working in the aerial mapping and sports action camera industries.
 
 <h3><u>Stuff I read:</u><h3>
