--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 <pre>
 <ul class="fa-ul">
 
-<li><i class="fa fa-refresh fa-spin fa-lg"></i> Senior Robotics Engineer @ Soloshot.</li>
+<li><i class="fa fa-refresh fa-spin fa-lg"></i> Full-time Senior Robotics Engineer @ Soloshot.</li>
 
 
 </ul>
@@ -19,7 +19,7 @@
 <ul class="fa-ul">
 <li><i class="fa fa-check-square-o fa-lg"></i> Full-time Engineer at Skycatch Inc. </li>
 
-<li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/~agents/?l=Research:Projects:productive_empathy:index#pagetop'>(Details)</a></li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/interaction/projects/desc.php?name=anxiety'>(Details)</a></li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> Multi Robot Path Planning - A Quadcopter Implementation. <a href='assets/pic.jpg'>(Details)</a></li>
 
