Layout reorganization, included separate academic and professional exp sections, updated publications.

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 
 
-<img align="left" style="margin-right:15px; margin-bottom:100px; margin-top:20px;" src='assets/me.png' />
+<img align="left" style="margin-right:15px; margin-bottom:100px; margin-top:10px;" src='assets/me.png' />
 <h2>Hey there!</h2>
 <p align="justify"> I'm a roboticist with a Bachelors degree in engineering from BIT, Mesra (2011) and an M.S. degree in computer science from the University of Southern California, Los Angeles (2014).</p>
 
@@ -9,14 +9,24 @@
 <p align="justify">
 My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization. Keeping in line with these areas I have gathered experience working in the aerial mapping and sports action camera industries.
 
-<h3><u>Stuff I read:</u><h3>
-<ul compact="true">
-<li><small><a href='http://planning.cs.uiuc.edu/'>Planning Algorithms</a> - Steven M. LaValle</small></li>
-<li><small><a href='http://link.springer.com/book/10.1007%2F978-1-84628-642-1'>Robotics Modelling, Planning and Control </a>- Siciliano, Sciavicco, Villani, Oriolo </small></li>
+
+<p align ="left">
+<h3><u>News:</u></h3>
+<pre style="margin-left:190px;">
+<ul class="fa-ul">
+
+<li><i class="fa fa-newspaper-o fa-lg"></i> LA Times August 2nd, 2015 <a href='assets/LAtimes.png'>(Details)</a></li>
+
+<li><i class="fa fa-newspaper-o fa-lg"></i> Student engineers shoot to No. 1 in airplane design-and-fly contest <a href='http://news.usc.edu/62584/student-engineers-shoot-to-no-1-in-airplane-design-and-fly-contest/'>(Details)</a></li>
+
+<li><i class="fa fa-newspaper-o fa-lg"></i> University of Southern California Wins 18th Annual Student Design/Build/Fly Competition <a href='http://www.aiaa.org/SecondaryTwoColumn.aspx?id=23020'>(Details)</a></li>
+
 </ul>
+</pre>
+</p>
 
-<h3><u>Find me here:</u></h3>
-<div>
-
+<h3 style="margin-left:190px;"><u>Find me here:</u></h3>
+<div style="margin-left:190px;">
 <a href='https://github.com/abishekh'><i class="fa fa-git-square fa-2x"></i></a> <a href='https://www.linkedin.com/in/abishekh'><i class="fa fa-linkedin-square fa-2x"></i></a> <a href='https://twitter.com/_AHariharan'><i class="fa fa-twitter-square fa-2x"></i></a> <a href='http://open.spotify.com/user/abishekh'><i class="fa fa-spotify fa-2x"></i></a> <a href='https://angel.co/abishekh'><i class="fa fa-angellist fa-2x"></i></a> <a href='http://steamcommunity.com/id/serpderp/'><i class="fa fa-steam-square fa-2x"></i></a> 
 </div>
+
