--- a/academic.html
+++ b/academic.html
@@ -1,23 +1,7 @@
-<h2><u>Projects:</u></h2> 
-
 <p>
-<h3><u>Ongoing:</u></h3>
+<h2><u>Academic Experience:</u></h2>
 <pre>
 <ul class="fa-ul">
-
-<li><i class="fa fa-refresh fa-spin fa-lg"></i> Full-time Senior Robotics Engineer @ Soloshot.</li>
-
-
-</ul>
-</pre>
-</p>
-
-
-<p>
-<h3><u>Past:</u></h3>
-<pre>
-<ul class="fa-ul">
-<li><i class="fa fa-check-square-o fa-lg"></i> Full-time Engineer at Skycatch Inc. </li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/interaction/projects/desc.php?name=anxiety'>(Details)</a></li>
 
@@ -32,23 +16,6 @@
 <li><i class="fa fa-check-square-o fa-lg"></i> Graph Based Planning for Checkers.<a href='/assets/checkers.png'>(Details)</a></li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> ...</li>
-</ul>
-</pre>
-</p>
-
-
-<p>
-<h3><u>In the News:</u></h3>
-<pre>
-<ul class="fa-ul">
-
-<li><i class="fa fa-newspaper-o fa-lg"></i> LA Times August 2nd, 2015 <a href='assets/LAtimes.png'>(Details)</a></li>
-
-<li><i class="fa fa-newspaper-o fa-lg"></i> Student engineers shoot to No. 1 in airplane design-and-fly contest <a href='http://news.usc.edu/62584/student-engineers-shoot-to-no-1-in-airplane-design-and-fly-contest/'>(Details)</a></li>
-
-<li><i class="fa fa-newspaper-o fa-lg"></i> University of Southern California Wins 18th Annual Student Design/Build/Fly Competition <a href='http://www.aiaa.org/SecondaryTwoColumn.aspx?id=23020'>(Details)</a></li>
-
-
 </ul>
 </pre>
 </p>
