--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ woopra.track();
     <script type='text/javascript'>
       $(document).ready(function() {
         $('#page_holder').pagify({
-          pages: ['about','hwexp', 'projects', 'publications','videos','photos','tools'],
+          pages: ['about','hwexp', 'academic','professional', 'publications','videos','photos','tools'],
           animation: 'fadeIn',
           'default': 'about',
           cache: true
@@ -46,12 +46,13 @@ woopra.track();
       <nav>
         <a href='#about'>About</a>
         <a href='#hwexp'>Hardware</a>
-        <a href='#projects'>Projects</a>
-	      <a href='#publications'>Publications</a>
-	      <a href='#videos'>Videos</a>
-	      <a href='#photos'>Photos</a>
-	      <a href='#tools'>Tools</a>
-	      <a href='/assets/Abishek_Hariharan_CV_August_2016.pdf'><i class="fa fa-file-text-o"></i></a>
+        <a href='#academic'>Academic</a>
+        <a href='#professional'>Professional</a>
+     	<a href='#publications'>Publications</a>
+	<a href='#videos'>Videos</a>
+        <a href='#photos'>Photos</a>
+	<a href='#tools'>Tools</a>
+	<a href='/assets/Abishek_Hariharan_CV_August_2016.pdf'><i class="fa fa-file-text-o"></i></a>
 	
       </nav>
     </header>
