--- a/publications.html
+++ b/publications.html
@@ -1,13 +1,35 @@
 <h2><u>Publications:</u></h2>
+
+<h3>Refereed Journal Articles:</h3>
 <ul class="fa-ul">
-<li><i class="fa-li fa fa-check-square"></i>
+<li>
 <pre>
+
  Karol Hausman, Joerg Mueller, Abishek Hariharan, Nora Ayanian and Gaurav S. Sukhatme.
 "Cooperative Multi-Robot Control for Target Tracking with Onboard Sensing".
  International Journal of Robotics Research, Oct. 2015.<a href='http://robotics.usc.edu/publications/873/'>(Details)</a> </pre>
 </li>
-<li><i class="fa-li fa fa-check-square"></i>
+</ul>
+
+
+<h3>Refereed Workshop Papers:</h3>
+<ul>
+<li>
 <pre>
+
+Cooperative Multi-Robot Control for Target Tracking with Efficient Switching of Onboard Sensing Topologies Sep. 2014
+Karol Hausman, Joerg Mueller, Abishek Hariharan, Nora Ayanian, Gaurav S. Sukhatme.
+IROS Workshop on Taxonomies of Interconnected Systems: Topology in Distributed Robotics.<a href='assets/Hausman-2014-896.pdf'>(.pdf)</a><a href='http://robotics.usc.edu/publications/896/'>(Details)</a>
+</pre>
+</li>
+</ul>
+
+
+<h3>Refereed Conference Papers:</h3>
+<ul>
+<li>
+<pre>
+
 Karol Hausman, Joerg Mueller, Abishek Hariharan, Nora Ayanian and Gaurav S. Sukhatme.
 "Cooperative Control for Target Tracking with Onboard Sensing".
 In Proceedings, International Symposium on Experimental Robotics (ISER), Jun 2014. <a href='assets/hausman14iser.pdf'>(.pdf)</a><a href='http://robotics.usc.edu/publications/844/'>(Details)</a>
