--- a/tools.html
+++ b/tools.html
@@ -1,13 +1,21 @@
 <h2>Tools:</h2>
 
 These are a few tools that I like to use from time to time, some are my own, some have been created by others.
+
+<h3><u>Software:</u><h3>
 <ul id='options'>
 <li>
-<b><a href='https://github.com/abishekh/CPP-Repo/tree/master/Skycatch/PIDControl'>PID Control Library</a></b> A PID Control Library written in C++
-</li>
+<small><a href='https://github.com/abishekh/CPP-Repo/tree/master/Skycatch/PIDControl'>PID Control Library</a></b> A PID Control Library written in C++
+</small></li>
 
 <li>
-<b><a href='https://github.com/apenwarr/sshuttle'>sshuttle</a></b> A handy proxy/VPN/access to geo-fenced data tool. Especially useful when you need access to resources that are local only. ;)
-</li>
+<small><a href='https://github.com/apenwarr/sshuttle'>sshuttle</a></b> A handy proxy/VPN access to geo-fenced data tool. Especially useful when you need access to resources that are local only. ;)
+</small></li>
 
+</ul>
+
+<h3><u>Reading:</u><h3>
+<ul id='options'>
+<li><small><a href='http://planning.cs.uiuc.edu/'>Planning Algorithms</a> - Steven M. LaValle</small></li>
+<li><small><a href='http://link.springer.com/book/10.1007%2F978-1-84628-642-1'>Robotics Modelling, Planning and Control </a>- Siciliano, Sciavicco, Villani, Oriolo </small></li>
 </ul>
