Added message validator

--- a/tools.html
+++ b/tools.html
@@ -8,6 +8,12 @@ These are a few tools that I like to use from time to time, some are my own, som
 <small><a href='https://github.com/abishekh/CPP-Repo/tree/master/Skycatch/PIDControl'>PID Control Library</a></b> A PID Control Library written in C++
 </small></li>
 
+
+<li>
+<small><a href='https://github.com/abishekh/CPP-Repo/tree/master/message_validator'>Regular Expression Message Validator</a></b> Great for deployment on embedded systems that require context passing and mode switching features. 
+</small></li>
+
+
 <li>
 <small><a href='https://github.com/apenwarr/sshuttle'>sshuttle</a></b> A handy proxy/VPN access to geo-fenced data tool. Especially useful when you need access to resources that are local only. ;)
 </small></li>
