--- a/tools.html
+++ b/tools.html
@@ -5,22 +5,29 @@ These are a few tools that I like to use from time to time, some are my own, som
 <h3><u>Software:</u><h3>
 <ul id='options'>
 <li>
-<small><a href='https://github.com/abishekh/CPP-Repo/tree/master/Skycatch/PIDControl'>PID Control Library</a></b> A PID Control Library written in C++
+<small><a href='https://github.com/abishekh/CPP-Repo/tree/master/Skycatch/PIDControl'>PID Control Library.</a></b> A PID Control Library written in C++
 </small></li>
 
 
 <li>
-<small><a href='https://github.com/abishekh/CPP-Repo/tree/master/message_validator'>Regular Expression Message Validator</a></b> Great for deployment on embedded systems that require context passing and mode switching features. 
+<small><a href='https://github.com/abishekh/CPP-Repo/tree/master/message_validator'>Regular Expression Message Validator.</a></b> Great for deployment on embedded systems that require context passing and mode switching features. 
 </small></li>
 
 <li>
-<small><a href='https://github.com/chzhong/serial-android'>Android Serial Communications Library.</a></b>Accessig serial ports through Java is not straightforward, so this is a great addition to any Android based robotics project. This requires NDK to build.
+<small><a href='https://github.com/chzhong/serial-android'>Android Serial Communications Library.</a></b> Accessig serial ports through Java is not straightforward, so this is a great addition to any Android based robotics project. This requires NDK to build.
 </small></li>
 
 
 <li>
 <small><a href='https://github.com/apenwarr/sshuttle'>sshuttle</a></b> A handy proxy/VPN access to geo-fenced data tool. Especially useful when you need access to resources that are local only. ;)
 </small></li>
+
+
+<li>
+<small><a href='http://cvlab.hanyang.ac.kr/tracker_benchmark/benchmark_v10.html'>Visual trackers benchmark.</a></b> Good benchmarking reference for various visual trackers.
+</small></li>
+
+
 
 </ul>
 
