Added relay and dmm under tools

--- a/tools.html
+++ b/tools.html
@@ -10,6 +10,14 @@ These are a few tools that I like to use from time to time, some are my own, som
 
 
 <li>
+<small><a href='https://github.com/abishekh/Python/tree/master/Relay%20Control'>USB Multi-channel relay control.</a></b> Script for triggering Kmtronic relays.
+</small></li>
+
+<li>
+<small><a href='https://github.com/abishekh/Python/tree/master/Digital%20Multimeter'>Keithley 2XXX DMM Interface.</a></b> Script for interfacing Keithley series 2xxx digital multimeters over RS232.
+</small></li>
+
+<li>
 <small><a href='https://github.com/abishekh/CPP-Repo/tree/master/message_validator'>Regular Expression Message Validator.</a></b> Great for deployment on embedded systems that require context passing and mode switching features. 
 </small></li>
 
