Added CHLA samples

--- a/academic.html
+++ b/academic.html
@@ -3,7 +3,7 @@
 <pre>
 <ul class="fa-ul">
 
-<li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/interaction/projects/desc.php?name=anxiety'>(Details)</a></li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/interaction/projects/desc.php?name=anxiety'>(Details)</a><a href='/assets/CHLA.png'>(UI sample)</a><a href='https://github.com/abishekh/CPP-Repo/tree/master/ROS%20Projects/heartrate'>(ROS Module example)</a></li>
 
 <li><i class="fa fa-check-square-o fa-lg"></i> Multi Robot Path Planning - A Quadcopter Implementation. <a href='assets/pic.jpg'>(Details)</a></li>
 
