Added academic exp

--- a/academic.html
+++ b/academic.html
@@ -2,6 +2,18 @@
 <h2><u>Academic Experience:</u></h2>
 <pre>
 <ul class="fa-ul">
+<li><i class="fa fa-check-square-o fa-lg"></i> Course Producer, USC - Viterbi School of Engineering </li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> Research Assistant, USC Interaction Lab </li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> Student Researcher, USC ACT Lab </li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> Senior Engineer, USC Aero Design Team </li>
+</ul>
+</pre>
+
+<pre>
+<ul class="fa-ul">
 
 <li><i class="fa fa-check-square-o fa-lg"></i> Modeling Productive Empathy for Reducing Anxiety in Hospitalized Children <a href='http://robotics.usc.edu/interaction/projects/desc.php?name=anxiety'>(Details)</a><a href='/assets/CHLA.png'>(UI sample)</a><a href='https://github.com/abishekh/CPP-Repo/tree/master/ROS%20Projects/heartrate'>(ROS Module example)</a></li>
 
