--- a/hwexp.html
+++ b/hwexp.html
@@ -11,6 +11,7 @@
 <li><i class="fa fa-check-square-o fa-lg"></i>  ATmega 1280 16Mhz</li>
 <li><i class="fa fa-check-square-o fa-lg"></i>  ATMega 328 16Mhz</li>
 <li><i class="fa fa-check-square-o fa-lg"></i>  ATMega 32U4 16Mhz</li>
+<li><i class="fa fa-check-square-o fa-lg"></i>  Snapdragon 410c</li>
 </ul>
 </pre>
 </p>
@@ -55,7 +56,25 @@
 
 
 <p>
-<h3><u>Robots:</u></h3>
+<h3><u>Composites Fabrication:</u></h3>
+<pre>
+<ul class="fa-ul">
+<li><i class="fa fa-check-square-o fa-lg"></i> Unidirectional carbon fibre tow.</li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> 45* cross weave carbon fibre with reinforced copper wire. </li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> 90* cross weave carbon fibre. </li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> Crossweave fibreglass. </li>
+
+<li><i class="fa fa-check-square-o fa-lg"></i> Crossweave kevlar ></li>
+</ul>
+</pre>
+</p>
+
+
+<p>
+<h3><u>Robots I've worked with:</u></h3>
 <pre>
 <ul class="fa-ul">
 <li><i class="fa fa-check-square-o fa-lg"></i> Aldebaran NAO <a href='https://en.wikipedia.org/wiki/Nao_%28robot%29'>(Details)</a></li>
