--- a/hwexp.html
+++ b/hwexp.html
@@ -67,7 +67,7 @@
 
 <li><i class="fa fa-check-square-o fa-lg"></i> Crossweave fibreglass. </li>
 
-<li><i class="fa fa-check-square-o fa-lg"></i> Crossweave kevlar ></li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Crossweave kevlar</li>
 </ul>
 </pre>
 </p>
