--- a/professional.html
+++ b/professional.html
@@ -4,7 +4,7 @@
 <ul class="fa-ul">
 
 <li><i class="fa fa-refresh fa-spin fa-lg"></i> Full-time Senior Robotics Engineer @ Soloshot.</li>
-<li><i class="fa fa-check-square-o fa-lg"></i> Full-time Engineer at Skycatch Inc. </li>
+<li><i class="fa fa-check-square-o fa-lg"></i>  Skycatch Inc. </li>
 
 
 </ul>
