--- a/photos.html
+++ b/photos.html
@@ -12,7 +12,7 @@ images:
   - image_path: /assets/vicon.jpg
     title: Vicon        
   - image_path: /assets/layup.jpg
-    title: Layup
+    title: CF Layup
   - image_path: /assets/build.jpg
     title: Build
   - image_path: /assets/foxconn.jpg
@@ -29,6 +29,8 @@ images:
     title: Thermocouple Calibration
   - image_path: /assets/yosemite.jpg
     title: Yosemite
+  - image_path: /assets/adt.jpg
+    title: Aero Design Team
 ---
 
 <h2>Photos:</h2>
