updated professional and added blog

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ woopra.track();
     <script type='text/javascript'>
       $(document).ready(function() {
         $('#page_holder').pagify({
-          pages: ['about','hwexp', 'academic','professional', 'publications','videos','photos','tools'],
+          pages: ['about','hwexp', 'academic','professional', 'publications','videos','photos','tools','blog'],
           animation: 'fadeIn',
           'default': 'about',
           cache: true
@@ -52,6 +52,7 @@ woopra.track();
 	<a href='#videos'>Videos</a>
         <a href='#photos'>Photos</a>
 	<a href='#tools'>Tools</a>
+	<a href='#blog'>Blog</a>
 	<a href='/assets/Abishek_Hariharan_CV_August_2016.pdf'><i class="fa fa-file-text-o"></i></a>
 	
       </nav>
