--- a/professional.html
+++ b/professional.html
@@ -1,12 +1,46 @@
+
 <p>
-<h3><u>Professional Experience:</u></h3>
+<h2><u>Professional Experience:</u></h2>
+
+<p>
+<h3>Soloshot:</h3>
 <pre>
-<ul class="fa-ul">
-
-<li><i class="fa fa-refresh fa-spin fa-lg"></i> Full-time Senior Robotics Engineer @ Soloshot.</li>
-<li><i class="fa fa-check-square-o fa-lg"></i>  Skycatch Inc. </li>
-
-
+<ul>
+<li><i class="fa fa-check-square-o fa-lg"></i> System Bring up.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Embedded system feature development (Message passing).</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Field Testing.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Android App development.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Focus point calibration.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Data collection and analysis.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Sensor assessment and accuracy and range characterization.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Working with UI/UX team.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Computer vision approaches to augment tracking.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Field Testing.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Working with Foxconn and MPR.</li>
 </ul>
 </pre>
 </p>
+
+<p>
+<h3>Skycatch:</h3>
+<pre>
+<ul>
+<li><i class="fa fa-check-square-o fa-lg"></i> System and Firmware Validation.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> on bench testing and outdoor testing.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Test fixture configuration for DVT and PVT of PCBs.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> HIL simulation.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Manual control and Flight Performance evaluation.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Accelerated life testing for high-particulate and higly corrosive environments</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> hardware and firmware feature recommendations.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Component Temperature characterization</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Scalability for automated large volume bring up.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Working with contract manufacturer - Jabil. </li>
+</ul>
+</pre>
+</p>
+
+
+
+
+
+
