--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ woopra.track();
     <meta charset='utf-8'>
 
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="jquery-1.6.4.min.js" type="text/javascript"></script>
-    <script src="../pagify.js" type="text/javascript"></script>
+    <script src="./jquery-1.6.4.min.js" type="text/javascript"></script>
+    <script src="./pagify.js" type="text/javascript"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/libre-bodoni" type="text/css"/>
     <script type='text/javascript'>
