--- a/professional.html
+++ b/professional.html
@@ -25,12 +25,14 @@
 <pre>
 <ul>
 <li><i class="fa fa-check-square-o fa-lg"></i> System and Firmware Validation.</li>
-<li><i class="fa fa-check-square-o fa-lg"></i> on bench testing and outdoor testing.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> On bench testing and field testing.</li>
 <li><i class="fa fa-check-square-o fa-lg"></i> Test fixture configuration for DVT and PVT of PCBs.</li>
 <li><i class="fa fa-check-square-o fa-lg"></i> HIL simulation.</li>
 <li><i class="fa fa-check-square-o fa-lg"></i> Manual control and Flight Performance evaluation.</li>
-<li><i class="fa fa-check-square-o fa-lg"></i> Accelerated life testing for high-particulate and higly corrosive environments</li>
-<li><i class="fa fa-check-square-o fa-lg"></i> hardware and firmware feature recommendations.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Environmental testing.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Accelerated life testing for high-particulate and highly corrosive environments</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Hardware and firmware feature design.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Fault classification and root causing.</li>
 <li><i class="fa fa-check-square-o fa-lg"></i> Component Temperature characterization</li>
 <li><i class="fa fa-check-square-o fa-lg"></i> Scalability for automated large volume bring up.</li>
 <li><i class="fa fa-check-square-o fa-lg"></i> Working with contract manufacturer - Jabil. </li>
