Travis exclude and blog post list styling

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@ woopra.track();
       <h1>Abishek Hariharan</h1>
     
       <nav>
-        <a href='#about'>About</a>
-        <a href='#hwexp'>Hardware</a>
-        <a href='#academic'>Academic</a>
-        <a href='#professional'>Professional</a>
-     	<a href='#publications'>Publications</a>
-	<a href='#videos'>Videos</a>
-        <a href='#photos'>Photos</a>
-	<a href='#tools'>Tools</a>
-	<a href='#blog'>Blog</a>
+        <a href='#about' data-proofer-ignore>About</a>
+        <a href='#hwexp' data-proofer-ignore>Hardware</a>
+        <a href='#academic' data-proofer-ignore>Academic</a>
+        <a href='#professional' data-proofer-ignore>Professional</a>
+     	<a href='#publications' data-proofer-ignore>Publications</a>
+	<a href='#videos' data-proofer-ignore>Videos</a>
+        <a href='#photos' data-proofer-ignore>Photos</a>
+	<a href='#tools' data-proofer-ignore>Tools</a>
+	<a href='#blog' data-proofer-ignore>Blog</a>
 	<a href='/assets/Abishek_Hariharan_CV_August_2016.pdf'><i class="fa fa-file-text-o"></i></a>
 	
       </nav>
