--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
 <p align="justify">I specialize in robotics, decision making and multi agent systems. I have previously worked on mobile, humanoid and interactive robots. I enjoy solving problems in these spaces and have collaborated with teams of varying sizes and maturities. My experience includes aspects of product development that range from initial problem decomposition, to architecture selection, feature development and system validation. 
 <br>
 <p align="justify">
-My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization. Keeping in line with these areas I have gathered experience working in the aerial mapping and sports action camera industries.
+My research interests include unmanned aerial systems, robot locomotion, remote sensing, multi agent path planning, neural networks, target tracking and localization.
+
 
 
 <p align ="left">
@@ -28,3 +29,7 @@ My research interests include unmanned aerial systems, robot locomotion, remote 
 <a href='https://github.com/abishekh'><i class="fa fa-git-square fa-2x"></i></a> <a href='https://www.linkedin.com/in/abishekh'><i class="fa fa-linkedin-square fa-2x"></i></a> <a href='https://twitter.com/_AHariharan'><i class="fa fa-twitter-square fa-2x"></i></a> <a href='http://open.spotify.com/user/abishekh'><i class="fa fa-spotify fa-2x"></i></a> <a href='https://angel.co/abishekh'><i class="fa fa-angellist fa-2x"></i></a> <a href='http://steamcommunity.com/id/serpderp/'><i class="fa fa-steam-square fa-2x"></i></a> 
 </div>
 
+
+<br>
+<br>
+<h4 style = "margin-left:190px;">“Take the risk of thinking for yourself, much more happiness, truth, beauty, and wisdom will come to you that way.” - The Hitch. </h4>
