--- a/photos.html
+++ b/photos.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 images:
+
+  - image_path: /assets/ext.jpg
+    title: Nao Robot Simulation in SL
   - image_path: /assets/CV.png
     title: Computer Vision
   - image_path: /assets/actlab.jpg
@@ -31,6 +34,7 @@ images:
     title: Yosemite
   - image_path: /assets/adt.jpg
     title: Aero Design Team
+
 ---
 
 <h2>Photos:</h2>
