--- a/photos.html
+++ b/photos.html
@@ -34,6 +34,8 @@ images:
     title: Yosemite
   - image_path: /assets/adt.jpg
     title: Aero Design Team
+  - image_path: /assets/599.jpg
+    title: Nora's 599 class!
 
 ---
 
