--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ title: My Blog
 <li class="blog-excp">
 <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3><span>- {{ post.date | date: "%b %-d, %Y" }}
 
-{{ post.excerpt }}<a href="{{ post.url | prepend: site.baseurl }}"><p> More...</p></a>
+{{ post.excerpt }}<a href="{{ post.url | prepend: site.baseurl }}"><p> More...</p></a>  <script id="dsq-count-scr" src="//abishekh.disqus.com/count.js" async></script>
 </span>
 </li>
 
