--- a/professional.html
+++ b/professional.html
@@ -3,6 +3,16 @@
 <h2><u>Professional Experience:</u></h2>
 
 <p>
+<h3>KUKA Robotics:</h3>
+<pre>
+<ul>
+<li><i class="fa fa-check-square-o fa-lg"></i> Research and Development.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Developing Industry 4.0 simulations pipeline. </li>
+</ul>
+</pre>
+</p>
+
+<p>
 <h3>Soloshot:</h3>
 <pre>
 <ul>
