--- a/photos.html
+++ b/photos.html
@@ -36,7 +36,12 @@ images:
     title: Aero Design Team
   - image_path: /assets/599.jpg
     title: Nora's 599 class!
-
+  - image_path: /assets/star.png
+    title: Discovery Channel
+  - image_path: /assets/austin.jpg
+    title: Austin
+  - image_path: /assets/kukacollege.jpg
+    title: Kuka College!
 ---
 
 <h2>Photos:</h2>
